--- a/RTMobile/RTMobile.Android/RTMobile.Android.csproj
+++ b/RTMobile/RTMobile.Android/RTMobile.Android.csproj
@@ -220,5 +220,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\visibilityOff.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\image.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\files.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\folder.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
