Добавлена обработка форматов файлов. Добавлено отображение в зависимости от типа файла. Исправлена прозрачность элементов карусели. Изменен внешний вид карусели. Добавлена страница просмотра изображений (без заполнения изображениями).

--- a/RTMobile/RTMobile/RTMobile.csproj
+++ b/RTMobile/RTMobile/RTMobile.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="dataIssue\photoView.xaml">
+    <EmbeddedResource Update="issues\viewIssue\imageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
@@ -69,7 +69,6 @@
     <Folder Include="calendar\" />
     <Folder Include="filter\" />
     <Folder Include="insight\" />
-    <Folder Include="issues\" />
     <Folder Include="notification\" />
     <Folder Include="profile\" />
   </ItemGroup>
