--- a/RTMobile/RTMobile/RTMobile.csproj
+++ b/RTMobile/RTMobile/RTMobile.csproj
@@ -61,6 +61,9 @@
     <EmbeddedResource Update="issues\viewIssue\imageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="issues\viewIssue\NewWorklog.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -78,5 +81,11 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="issues\viewIssue\NewWorklog.xaml.cs">
+      <DependentUpon>NewWorklog.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
