--- a/RTMobile/RTMobile.Android/RTMobile.Android.csproj
+++ b/RTMobile/RTMobile.Android/RTMobile.Android.csproj
@@ -261,5 +261,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\sorted.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\relatedIssue.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
