--- a/RTMobile/RTMobile.UWP/RTMobile.UWP.csproj
+++ b/RTMobile/RTMobile.UWP/RTMobile.UWP.csproj
@@ -152,6 +152,12 @@
     <PackageReference Include="Xam.Plugin.FilePicker">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
